--- a/Index.html
+++ b/Index.html
@@ -246,17 +246,19 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">
+              Chairs landing page
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/NaveedHussainZ'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://naveedhussainz.github.io/Chairs-Shop-landing-web-page/'"
               >
                 Live Demo
               </button>
